# cs691_introtoaerialrobotics

hw_001/: CMakeLists.txt  run_script.sh
hw_001/report/: FraserLuke.tex
hw_001/scripts/: plot_kalman.py
hw_001/src/: estimate_voltage.cc
hw_001b/: run_script.sh
hw_001b/bag/: 2016-02-16-22-36-39.bag.tar.xz
hw_001b/report/: FraserLuke.tex
hw_001b/scripts/: extended_kalman_filter.py
